[ec2] 시작 문제 해결 수정

--- a/ec2/04_EC2 시작 문제 해결.md
+++ b/ec2/04_EC2 시작 문제 해결.md
@@ -18,8 +18,8 @@
 
 ### 🔶 2. vCPU 제한 확인 및 증가 요청 방법
 Limits 페이지에서 확인:  
-- All Standard Spot Instance Request → 64 vCPUs 제한  
-- Running On-Demand All Standard → 64 vCPUs 제한  
+- `All Standard Spot Instance Request` → 64 vCPUs 제한  
+- `Running On-Demand All Standard` → 64 vCPUs 제한  
 - Service Quotas Console에서 확인 및 요청 가능  
 - vCPU 계산기 사용 가능 (하지만 시험에서는 직접 사용하지 않음)
 
