--- a/ec2/03_종료 동작 및 종료 보호.md
+++ b/ec2/03_종료 동작 및 종료 보호.md
@@ -1,6 +1,6 @@
-## 🟠 EC2 인스턴스의 셧다운 방식 정리
+##  EC2 인스턴스의 셧다운 방식 정리
 
-### 🔶 OS 내에서 셧다운 시 EC2 인스턴스의 반응
+### 1. OS 내에서 셧다운 시 EC2 인스턴스의 반응
 
 기본값 : 중지(Stop)
 - 운영 체제에서 중지하면 EC2 인스턴스도 중지됨
@@ -10,7 +10,7 @@
 
 <br>
 
-### 🔶 AWS 콘솔에서의 종료와 차이점
+### 2. AWS 콘솔에서의 종료와 차이점
 
 콘솔에서 오른쪽 클릭 → 중지(Stop) 시 종료되지 않음.
 
@@ -18,23 +18,23 @@
 
 <br>
 
-### 🔶 CLI 속성
+### 3. CLI 속성
 
 InstanceInitiatedShutdownBehavior : OS 내에서 셧다운 시 동작 결정.  
 (인스턴스 이니시에이트 셧다운 비헤이비어)
 
 <br>
 
-### 🔶 EC2 종료 방지 기능
+### 4. EC2 종료 방지 기능
 
 종료 방지 활성화 시 AWS 콘솔이나 API를 통한 종료 불가.  
 하지만 OS에서 실행한 셧다운은 종료 방지가 활성화되어도 적용됨.
 
 <br>
 
-### 🔶 시험에서 나올 수 있는 문제 유형
+### 5. 시험에서 나올 수 있는 문제 유형
 
-🔸 **설정 기반 시나리오 문제**
+**설정 기반 시나리오 문제**
 
 EC2 인스턴스에서 InstanceInitiatedShutdownBehavior가 Terminate로 설정되고 종료 방지가 활성화된 경우, OS에서 shutdown 명령 실행 시 어떤 일이 발생하는가?  
 
@@ -45,7 +45,7 @@ D) 아무 일도 일어나지 않음
 
 <br>
 
-🔸 **CLI 속성 관련 문제**
+**CLI 속성 관련 문제**
 
 InstanceInitiatedShutdownBehavior 속성을 변경하는 AWS CLI 명령어는?  
 
@@ -56,7 +56,7 @@ D) aws ec2 stop-instances --instance-ids i-1234567890abcdef0
 
 <br>
 
-🔸 **종료 방지 설정 관련 문제**
+**종료 방지 설정 관련 문제**
 
 종료 방지가 활성화된 EC2 인스턴스에서 AWS 콘솔을 사용하여 종료를 시도하면 어떤 결과가 발생하는가?  
 
