--- a/ec2/04_EC2 시작 문제 해결.md
+++ b/ec2/04_EC2 시작 문제 해결.md
@@ -1,6 +1,6 @@
-## 🟠 EC2 인스턴스 실행 문제 및 해결 방법
+## EC2 인스턴스 실행 문제 및 해결 방법
 
-### 🔶 1. InstanceLimitExceeded 오류
+### 1. InstanceLimitExceeded 오류
 원인 :
 - 해당 리전에서 vCPU 한도 초과  
 
@@ -16,7 +16,7 @@
 
 <br>
 
-### 🔶 2. vCPU 제한 확인 및 증가 요청 방법
+### 2. vCPU 제한 확인 및 증가 요청 방법
 Limits 페이지에서 확인:  
 - `All Standard Spot Instance Request` → 64 vCPUs 제한  
 - `Running On-Demand All Standard` → 64 vCPUs 제한  
@@ -25,7 +25,7 @@ Limits 페이지에서 확인:
 
 <br>
 
-### 🔶 3. 인스턴스 유형별 vCPU 확인
+### 3. 인스턴스 유형별 vCPU 확인
 AWS EC2 콘솔 → 인스턴스 유형 비교에서 확인 가능  
 예시 :
 - t2.micro → 1 vCPU
@@ -33,7 +33,7 @@ AWS EC2 콘솔 → 인스턴스 유형 비교에서 확인 가능
 
 <br>
 
-### 🔶 4. InsufficientInstanceCapacity 오류
+### 4. InsufficientInstanceCapacity 오류
 원인 : 
 - 특정 AZ(가용 영역)에서 온디맨드 인스턴스 용량 부족  
 
@@ -45,7 +45,7 @@ AWS EC2 콘솔 → 인스턴스 유형 비교에서 확인 가능
 
 <br>
 
-### 🔶 5. EC2 인스턴스가 즉시 종료되는 경우
+### 5. EC2 인스턴스가 즉시 종료되는 경우
 원인 :  
 - EBS 볼륨 한계 초과
 - EBS 스냅샷 손상
@@ -57,8 +57,8 @@ AWS EC2 콘솔 → 인스턴스 유형 비교에서 확인 가능
 
 <br>
 
-### 🔶 시험에서 나올 수 있는 문제 유형
-🔸 **vCPU 제한 관련 문제**
+### 6. 시험에서 나올 수 있는 문제 유형
+**vCPU 제한 관련 문제**
 
 특정 리전에서 InstanceLimitExceeded 오류가 발생하면 어떻게 해결할 수 있는가?  
 A) 인스턴스 유형을 변경한다.  
@@ -68,7 +68,7 @@ D) 온디맨드 인스턴스 대신 스팟 인스턴스를 사용한다.
 
 <br>
 
-🔸 **InsufficientInstanceCapacity 오류 관련 문제**
+**InsufficientInstanceCapacity 오류 관련 문제**
 
 InsufficientInstanceCapacity 오류가 발생했을 때 해결 방법으로 부적절한 것은?  
 A) 다른 AZ에서 요청한다.  
@@ -78,7 +78,7 @@ D) AWS에 문의하여 해결 요청을 보낸다. ✅
 
 <br>
 
-🔸 **즉시 종료 문제 관련 문제**
+**즉시 종료 문제 관련 문제**
 
 EC2 인스턴스가 시작 후 즉시 종료되는 원인이 아닌 것은?  
 A) EBS 볼륨 용량 초과  
