--- a/ec2/02_배치그룹.md
+++ b/ec2/02_배치그룹.md
@@ -1,10 +1,10 @@
-## 🟠 **AWS EC2 배치 그룹 정리**
+## 1.  **AWS EC2 배치 그룹 정리**
 
 AWS EC2 배치 그룹 (Placement Group)은 EC2 인스턴스가 AWS 인프라에 배치되는 방식을 제어하는 기능입니다.
 
 이를 통해 네트워크 성능을 최적화하거나, 장애 복원력을 높일 수 있습니다.
 
-### 🔶 **배치 그룹의 3가지 전략**
+### 1-1.  **배치 그룹의 3가지 전략**
 
 | 배치 그룹 유형 | 목적 | 특징 | 사용 사례 |
 | --- | --- | --- | --- |
@@ -14,18 +14,18 @@ AWS EC2 배치 그룹 (Placement Group)은 EC2 인스턴스가 AWS 인프라에 
 
 <br>
 
-### 🔶 **1. 클러스터 배치 그룹 (Cluster Placement Group)**
+###  **2. 클러스터 배치 그룹 (Cluster Placement Group)**
 
 💡 **목적:** **초저지연, 높은 네트워크 처리량 제공**
 
-🔸**특징:**
+**특징:**
 
 - 인스턴스가 **동일한 가용 영역(AZ)** 내에서 **물리적으로 가까운 하드웨어에 배치**
 - **최대 10~100 Gbps 네트워크 대역폭 제공 (ENA 사용)**
 - **지연 시간이 매우 짧고 처리량이 높음**
 - **하지만 AZ 장애 시 모든 인스턴스가 동시에 다운될 위험** 존재
 
-🔸**사용 사례:**
+**사용 사례:**
 
 - **고성능 컴퓨팅 (HPC)**
 - **AI/ML 학습 및 빅데이터 분석**
@@ -33,34 +33,34 @@ AWS EC2 배치 그룹 (Placement Group)은 EC2 인스턴스가 AWS 인프라에 
 
 <br>
 
-### 🔶 **2. 분산 배치 그룹 (Spread Placement Group)**
+### **3. 분산 배치 그룹 (Spread Placement Group)**
 
 💡 **목적:** **장애 격리 및 고가용성 보장**
 
-🔸**특징:**
+**특징:**
 
 - 인스턴스가 **각각 다른 물리적 하드웨어에 배치**
 - **AZ당 최대 7개의 인스턴스 제한**
 - **한 서버의 장애가 전체 서비스에 영향을 주지 않도록 설계**
 - 여러 가용 영역(AZ)에 배치 가능하여 **고가용성(HA)** 보장
 
-🔸**사용 사례:**
+**사용 사례:**
 
 - **장애 발생 시 영향을 최소화해야 하는 크리티컬 애플리케이션**
 - **가용성을 극대화해야 하는 금융 서비스, 의료 시스템**
 
-🔸**제한 사항:**
+**제한 사항:**
 
 - AZ당 최대 **7개의 인스턴스**만 배치 가능
 - 대규모 시스템에는 적합하지 않음
 
 <br>
 
-### 🔶 **3. 분할 배치 그룹 (Partition Placement Group)**
+###  **4. 분할 배치 그룹 (Partition Placement Group)**
 
 💡 **목적:** **대규모 분산 시스템에서 장애 도메인 격리**
 
-🔸**특징:**
+**특징:**
 
 - 인스턴스를 **여러 파티션(Partition)에 나누어 배치**
 - 한 파티션의 장애가 다른 파티션에 영향을 주지 않음
@@ -68,12 +68,12 @@ AWS EC2 배치 그룹 (Placement Group)은 EC2 인스턴스가 AWS 인프라에 
 - 가용 영역(AZ)당 **최대 7개의 파티션**을 가질 수 있음
 - **가용 영역 간 확장이 가능하며, 수백 개의 인스턴스를 배포할 수 있음**
 
-🔸**사용 사례:**
+**사용 사례:**
 
 - **Hadoop, Apache Cassandra, Kafka 같은 분산 시스템**
 - **파티션을 인식하는 데이터베이스 (HDFS, HBase, NoSQL 등)**
 
-🔸**특이점:**
+**특이점:**
 
 - **각 인스턴스가 속한 파티션 정보를 메타데이터 서비스에서 조회 가능**
 - 다른 파티션과의 격리를 통해 장애 확산을 방지
